gitps/gke/production/platform/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: platform
  labels:
    app: api 
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: platform
          image: europe-southwest1-docker.pkg.dev/platform-373114/primary/platform:v3.3.5
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
          command:
            - "./server"
          args:
            - "server"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: config.yml
              subPath: config.yaml
            - name: gcp-service-account-volume
              mountPath: bigquery-svc-acc.json
              subPath: bigquery-svc-acc.json
      imagePullSecrets:
        - name: docker-config
      volumes:
        - name: config-volume
          configMap:
            name: api
        - name: gcp-service-account-volume
          secret:
            secretName: gcp-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: platform
  labels:
    app: api
spec:
  ports:
  - port: 3000
    targetPort: http
    name: http
  selector:
    app: api
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api
  namespace: platform
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: platform
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`api.vedia.games`)
      middlewares:
        - name: api
          namespace: platform
      kind: Rule
      services:
        - name: api
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: api.vedia.games
